# claudeville

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  main.py  pyproject.toml
hearth/: .env.example  CHECKLIST.md  CLAUDE.md  DESIGN.md  README.md  __init__.py  logging_config.py  main.py  pyproject.toml
hearth/adapters/: __init__.py  claude_provider.py  perception.py  prompt_builder.py  tools.py  tracer.py
hearth/config/: .gitkeep  agents.yaml  recipes.yaml  settings.yaml
hearth/core/: __init__.py  actions.py  agent.py  constants.py  conversation.py  events.py  objects.py  structures.py  terrain.py  types.py  world.py
hearth/engine/: __init__.py  context.py  engine.py  runner.py
hearth/engine/phases/: __init__.py  agent_turn.py  base.py  commit.py  invitations.py  movement.py  schedule.py  wake.py
hearth/generation/: __init__.py  terrain.py  tileset.py
hearth/generation/wfc/: __init__.py  grid.py  solver.py  tile.py
hearth/observe/: __init__.py  api.py
hearth/observe/tui/: __init__.py  app.py  theme.tcss
hearth/observe/tui/widgets/: __init__.py  agent_list.py  agent_stream.py  cell_info.py  grid_view.py  header.py
hearth/observer/: __init__.py
hearth/observer/tui/: __init__.py
hearth/services/: __init__.py  action_engine.py  agent_service.py  conversation.py  crafting.py  narrator.py  scheduler.py  world_service.py
hearth/storage/: __init__.py  database.py  event_log.py  schema.py  snapshots.py
hearth/storage/migrations/: __init__.py
hearth/storage/repositories/: __init__.py  agent.py  base.py  conversation.py  object.py  world.py
hearth/tests/: __init__.py  conftest.py  test_package.py
hearth/tests/adapters/: __init__.py  test_perception.py  test_prompt_builder.py  test_tools.py  test_tracer.py
hearth/tests/core/: __init__.py  test_agent.py  test_events.py  test_objects.py  test_terrain.py  test_types.py  test_world.py
hearth/tests/engine/: test_context.py
hearth/tests/engine/phases/: __init__.py  (+2 more)
hearth/tests/generation/: __init__.py  test_terrain.py  test_tileset.py
hearth/tests/integration/: __init__.py  test_perception_integration.py
hearth/tests/observe/: __init__.py  conftest.py  test_api.py
hearth/tests/services/: __init__.py  conftest.py  test_action_engine.py  test_agent_service.py  test_conversation.py  test_crafting.py  test_narrator.py  test_scheduler.py  test_world_service.py
hearth/tests/storage/: conftest.py  test_agent_repo.py  test_conversation_repo.py  test_database.py  test_event_log.py  test_world_repo.py
(+114 files in other folders)
