[project]
name = "claudeville"
version = "0.2.0"
description = "A multi-agent village simulation where Claude agents live, work, and interact with genuine autonomy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "langsmith[claude-agent-sdk]>=0.2.0",
    "python-dotenv>=1.2.1",
    "textual>=0.89.0",
]

[project.scripts]
claudeville = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5.0",
]
