[project]
name = "hearth"
version = "0.1.0"
description = "A grid-based world for Claude agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Match ClaudeVille versions for shared deps
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "langsmith[claude-agent-sdk]>=0.2.0",
    "python-dotenv>=1.2.1",
    "textual>=0.89.0",
    "pydantic>=2.0.0",
    # Hearth-specific
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
hearth = "main:main"
